# my-cookiecutter-project

./: .gitignore  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  tasks.py  test.txt.dvc
.dvc/: config  gcp-key.json  gcs-key.json
.github/workflows/: cml_data.yaml  tests.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dummy_project/: cloudbuild.yaml  main.py
models/: model_checkpoint.pth
src/cookiecutter1/: api.py  data.py  dataset_stats.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: settings
