[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter1"
version = "0.0.1"
description = "MlOps cookiecutter project"
authors = [
  { name = "Rasmus", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
select = ["I"]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
