[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter1"
version = "0.0.1"
description = "MlOps cookiecutter project"
authors = [
  { name = "Rasmus", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=1.0.0",
  "typer>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black>=22.3",
]

[tool.ruff]
select = ["I"]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "cookiecutter1.train:train"
process-data = "cookiecutter1.data:preprocess_data"
evaluate = "cookiecutter1.evaluate:evaluate"
